baml_language/crates/baml_tests/snapshots/diagnostic_errors/catch_arm_braceless_return/baml_tests__diagnostic_errors__catch_arm_braceless_return__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 40573
---
=== PPIR ===
function user.callee(x: int) -> bool  [expr] {
  { if (x Eq 0) { throw "boom" } } true
}
function user.caller(x: int) -> bool  [expr] {
  {  } callee(x) catch (e) { string => return e }
}
