baml_language/crates/baml_tests/snapshots/diagnostic_errors/catch_arm_braceless_return/baml_tests__diagnostic_errors__catch_arm_braceless_return__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
enum user.Errors
function user.callee() -> bool throws user.Errors {
  { : never
    return true : true
  }
  ?? 626..632: extraneous throws declaration: Errors
}
function user.caller() -> bool throws never {
  { : bool
    catch (callee() : bool) : bool
      catch (e)
        Errors.AuthenticationError =>
          return e : never
  }
  !! 903..904: type mismatch: expected bool, got Errors
}
