baml_language/crates/baml_tests/snapshots/diagnostic_errors/catch_arm_braceless_return/baml_tests__diagnostic_errors__catch_arm_braceless_return__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] E0001

  × type mismatch: expected bool, got string
    ╭─[repro.baml:23:22]
 23 │     string => return e
    ·                      ┬
    ·                      ╰── type mismatch: expected bool, got string
    ╰────
